frontend/test/should_pass/edge_011.grg
using edge_model_002;

rule r {
	x:Node;
	x -e:A- x;
	
	modify {
	}
}
